--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to right, rgba(7,27,82,1) 0%, rgba(0,128,18,1) 100%);
+}
+
+h1 {
+  color: aliceblue;
 }
 
 code {
